Force debugger trigger

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 	 elem = document.getElementById("stop");
 	 elem.style.display="block";
 
+	 debugger;
+
 	 audioman = new AudioManager(false);
 	 audioman.startRecording();
       }
