--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 	 elem = document.getElementById("stop");
 	 elem.style.display="block";
 
-	 audioman = new AudioManager(true);
+	 audioman = new AudioManager(false);
 	 audioman.startRecording();
       }
 
